--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,184 @@
-.App {
+
+span{
+  padding-right: 15px;
+  width: 5px;
+  color: rgb(84, 11, 151);
+}
+.navbar1{
+  background-color: rgb(118, 153, 142);
+  position: fixed !important;
+  width: 100%;
+  z-index: 1;
+}
+
+
+/* App.css */
+.bg-img-container {
+  background-image: url('Components/c1.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 85vh; /* Adjust the height as needed */
+  padding-top: 90px !important;
+
+}
+
+#nvlink{
+  font-size: 20px;
+}
+#z{
+  color: rgb(160, 6, 6);
+  font-size: 50px;
+}
+/*homepage*/
+
+.ct1{
   text-align: center;
+  padding-top: 40px;
+ color: beige;
+
+}
+.homep{
+  color: antiquewhite;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 100px;
+  text-align: center;
+  font-size: 34px;
+}
+card.title{
+  font-size: 30px;
+}
+.card1{
+  text-align: center;
+  font-size: 60px;
+}
+/*Services*/
+.row img{
+  margin-top: 5px !important;
+  height: 250px;
+  border-radius: 15px;
+  box-shadow: 1px 2px 3px  rgb(118, 153, 142);;
+}
+.row .ser{
+  margin-top: 23px;
+  text-decoration:rgb(47, 45, 47) underline;
+  text-align: center;
+  color: rgb(40, 110, 112);
+  
+  
+}
+.row .ser1{
+  margin-top: 5px;
+  text-align: center;
+  color: blue;
+}
+.Services{
+  padding-top: 90px !important;
+}
+/*about*/
+.About .abouth3{
+   color: rgb(12, 12, 190);
+}
+.About1{
+  padding-top: 90px !important;
+
+}
+/*Contact */
+.Contact{
+  padding-top: 90px !important;
+}
+.Contact ul li{
+ list-style: none;
+ 
+}
+/*footer*/
+.foot1{
+  background-color:  rgb(118, 153, 142);;
+  padding-top: 10px;
+  color: rgb(235, 237, 241);
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 575px){
+  .brand h1{
+    font-size: 30px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  #z{
+    color: rgb(160, 6, 6);
+    font-size: 40px;
   }
-  to {
-    transform: rotate(360deg);
+  .iframe{
+    width: 280px;
+    height: 180px;
   }
+  /*home*/
+  .homep{
+    position:absolute;
+    color: antiquewhite;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 40px !important;
+    text-align: center;
+    font-size: 16px;
+    padding-bottom: 20px !important;
+   
+  
+  }
+  .ct1{
+    position:absolute !important;
+    text-align: center;
+   color: beige;
+   font-size: 16px;
+   padding-top:30px;
+   padding-left: 45px;
+  }
+
+.bg-img-container {
+  
+  background-image: url('Components/c1.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 80vh; /* Adjust the height as needed */
+  
+
+}
+/*Services*/
+.row img{
+  margin-top: 14px !important;
+  height: 200px;
+}
+/*about*/
+.About .Abouth5{
+   font-size: 15px;
+}
+
+  }
+
+
+
+@media (min-width: 576px) and (max-width: 767px){
+
+}
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+
+
+#cards{
+margin-top: 10px;
+
+
+}
+.card{
+border: none !important;
+font-family: Georgia, 'Times New Roman', Times, serif;
+border-radius: 5% !important;
+box-shadow: 3px 5px 7px rgb(187, 191, 193);
+}
+
+.card img{
+width: 100% !important;
 }
